--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="javascript: return false;">Moedas<i class="bi bi-currency-bitcoin"></i></a>
+    </div>
+  </nav>
 <router-outlet></router-outlet>
