--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -1,8 +1,8 @@
 <table class="table table-success table-striped">
     <thead>
-        <th>Id</th>
-        <th>Nome </th>
-        <th>Preço <i class="bi bi-currency-dollar"></i></th>
+        <th>Id<i class="bi bi-123"></i></th>
+        <th>Nome<i class="bi bi-sort-alpha-down"></i></th>
+        <th>Preço<i class="bi bi-currency-dollar"></i></th>
         <th></th>
     </thead>
     <tbody>
